# elasticsearch-py

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.rst  Docker.md  Dockerfile  MANIFEST.in  Makefile  NOTICE  README  README.md  README.rst  catalog-info.yaml  dev-requirements.txt  dev_requirements.txt  docker-compose.yml  generate_api.py  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini  wait-for-elasticsearch.sh
.buildkite/: Dockerfile  pipeline.yml  pull-requests.json  run-elasticsearch.sh  run-nox.sh  run-repository.sh  run-tests
.buildkite/certs/: README.md  ca.crt  testnode.crt  testnode.key
.buildkite/functions/: imports.sh
.ci/: Dockerfile  Dockerfile-py  Dockerfile-py26  docker-compose.yml  make-macos.sh  make.sh  run-elasticsearch.sh  run-repository.sh  run-tests  test-matrix.yml
.ci/certs/: ca.pem
.ci/functions/: cleanup.sh  imports.sh
.ci/jobs/: defaults.yml  elastic+elasticsearch-py+6.x.yml  elastic+elasticsearch-py+7.10.yml  elastic+elasticsearch-py+7.11.yml  elastic+elasticsearch-py+7.12.yml  elastic+elasticsearch-py+7.13.yml  elastic+elasticsearch-py+7.14.yml  elastic+elasticsearch-py+7.15.yml  elastic+elasticsearch-py+7.16.yml  elastic+elasticsearch-py+7.17.yml  elastic+elasticsearch-py+7.7.yml  elastic+elasticsearch-py+7.8.yml  elastic+elasticsearch-py+7.9.yml  elastic+elasticsearch-py+7.x.yml  elastic+elasticsearch-py+8.0.yml  elastic+elasticsearch-py+8.1.yml  elastic+elasticsearch-py+8.2.yml  elastic+elasticsearch-py+8.3.yml  elastic+elasticsearch-py+8.4.yml  elastic+elasticsearch-py+main.yml  elastic+elasticsearch-py+master.yml  elastic+elasticsearch-py+pull-request.yml
.github/: ISSUE_TEMPLATE.md  make.sh
.github/workflows/: backport.yml  ci.yml  close-stale.yml  docs-preview.yml  pypi-publish.yml  unified-release.yml
docs/: Changelog.rst  api.rst  async.rst  conf.py  connection.rst  docset.yml  exceptions.rst  helpers.rst  index.rst  transports.rst  xpack.rst
docs/guide/: async.asciidoc  configuration.asciidoc  connecting.asciidoc  connection-pool.asciidoc  connection-selector.asciidoc  elasticsearch-dsl.asciidoc  esql-pandas.asciidoc  esql-query-builder.asciidoc  examples.asciidoc  getting-started.asciidoc  helpers.asciidoc  index-custom-title-page.html  index.asciidoc  installation.asciidoc  integrations.asciidoc  migration.asciidoc  open-telemetry.asciidoc  overview.asciidoc  release-notes.asciidoc
docs/reference/: _configuration.md  _examples.md  _how_to_guides.md  _tutorials.md  async.md  client-helpers.md  configuration.md  connecting.md  dsl_configuration.md  dsl_examples.md  dsl_how_to_guides.md  dsl_migrating.md  dsl_tutorials.md  elasticsearch-dsl.md  esql-pandas.md  esql-query-builder.md  examples.md  getting-started.md  index.md  installation.md  integrations.md  opentelemetry.md  querying.md  toc.yml
docs/release-notes/: breaking-changes.md  deprecations.md  index.md  known-issues.md
docs/sphinx/: Changelog.rst  Makefile  api.rst  api_helpers.rst  async-search.rst  async.rst  async_api_helpers.rst  async_dsl.rst  async_es_api.rst  autoscaling.rst  conf.py  connection.rst  dsl.rst  es_api.rst  esql.rst  exceptions.rst  helpers.rst  index.rst  interactive.rst  quickstart.rst  transports.rst  xpack.rst
elasticsearch/: __init__.py  __init__.pyi  _otel.py  _utils.py  _version.py  client.py  compat.py  compat.pyi  connection.py  connection_pool.py  connection_pool.pyi  exceptions.py  exceptions.pyi  helpers.py  serializer.py  serializer.pyi  transport.py  transport.pyi  utils.py  utils.pyi
elasticsearch/_async/: __init__.py  _extra_imports.py  actions.py  compat.py  connection_pool.py  helpers.py  helpers.pyi  http_aiohttp.py  http_aiohttp.pyi  transport.py  transport.pyi
elasticsearch/_sync/: __init__.py
elasticsearch/client/: __init__.py  __init__.pyi  async_search.py  async_search.pyi  autoscaling.py  autoscaling.pyi  cat.py  cat.pyi  ccr.py  ccr.pyi  cluster.py  cluster.pyi  dangling_indices.py  dangling_indices.pyi  data_frame.py  data_frame.pyi  data_frame_transform_deprecated.py  deprecation.py  deprecation.pyi  enrich.py  enrich.pyi  eql.py  eql.pyi  features.py  features.pyi  fleet.py  fleet.pyi  graph.py  graph.pyi  ilm.py  ilm.pyi  indices.py  indices.pyi  ingest.py  ingest.pyi  license.py  license.pyi  logstash.py  logstash.pyi  migration.py  (+37 more)
elasticsearch/connection/: __init__.py  __init__.pyi  aws.py  base.py  base.pyi  elasticsearch.thrift  http.py  http_aiohttp.py  http_aiohttp.pyi  http_alf.py  http_aws.py  http_pycurl.py  http_requests.py  http_requests.pyi  http_urlfetch.py  http_urllib3.py  http_urllib3.pyi  memcached.py  pooling.py  redis_connection.py  thrift.py  thriftpy.py
elasticsearch/dsl/: __init__.py  aggs.py  analysis.py  connections.py  (+22 more)
elasticsearch2/: __init__.py
elasticsearch5/: __init__.py  compat.py  connection_pool.py  exceptions.py  transport.py
elasticsearch6/: __init__.py  compat.py  transport.py
example/: README.rst  load.py  queries.py  requirements.txt
test_elasticsearch/: README.rst  conftest.py  docker-compose.yml  run_tests.py  start_elasticsearch.sh  test_base.py  test_cases.py  test_connection.py  test_connection_pool.py  test_esql.py  test_exceptions.py  test_helpers.py  test_module.py  test_otel.py  test_serializer.py  test_strategies.py  test_transport.py  test_trigger_fieldslimit.py  test_utils.py  utils.py
test_elasticsearch2/: run_tests.py  test_cases.py  test_connection.py  test_connection_pool.py  test_helpers.py  test_serializer.py  test_transport.py
utils/: Dockerfile  build-dists.py  build_dists.py  bump-version.py  dense-vector-benchmark.py  docker-compose.yml  dsl-generator.py  generate-api.py  generate-examples.py  generate_api.py  generate_examples.py  license-headers.py  license_headers.py  run-black.py  run-unasync-dsl.py  run-unasync.py
(+605 files in other folders)
